# valid8

./: .gitignore  README.md  package-lock.json  package.json
MedLens BisonHacks (ML Section)/: MedLens — AI Pipeline Documentation.md  medlens-ai.js  package-lock.json  test-script.js
MedLens BisonHacks (ML Section)/tests/: test-script.js
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  health.py  interactions.py  pdf.py  pipeline.py  tts.py
backend/app/core/: config.py
backend/app/db/: indexes.py  mongo.py
backend/app/repositories/: interaction_cache_repo.py
backend/app/schemas/: common.py  interactions.py  pdf.py  pipeline.py  tts.py
backend/app/services/: interaction_service.py  medication_extraction.py  pdf_service.py  pipeline_service.py  tts_service.py
backend/docs/: api-contract.md
backend/samples/: pipeline_from_extracted_direct.json  pipeline_from_person2_entities.json
backend/scripts/: dev_smoke_test.py
backend/tests/: test_health.py  test_interaction_service.py  test_medication_extraction.py  test_pdf_routes.py  test_pipeline_fallback.py  test_tts_routes.py
src/: App.jsx  medlens-ai.js
src/components/: CameraCapture.jsx
src/context/: DocumentContext.jsx  documentcontext.jsx
src/hooks/: useDocumentAnalysis.js
src/lib/: backendClient.js
src/pages/: LandingPage.jsx  ProcessingPage.jsx  ResultsPage.jsx
src/services/: medlens-ai.js
